dataset/local/tf_rds_copy_tags_to_snapshots/resource.yaml
apiVersion: terraform.io/v1
kind: Plan
metadata:
  name: good-plan
terraform_version: "1.8.4"
planned_values:
  root_module:
    resources:
      - type: aws_db_instance
        name: my_db
        values:
          identifier: my-db-instance
          engine: mysql
          instance_class: db.t3.micro
          copy_tags_to_snapshot: true
---
apiVersion: terraform.io/v1
kind: Plan
metadata:
  name: bad-plan
terraform_version: "1.8.4"
planned_values:
  root_module:
    resources:
      - type: aws_db_instance
        name: my_db
        values:
          identifier: my-db-instance
          engine: mysql
          instance_class: db.t3.micro
          copy_tags_to_snapshot: false
