dataset/local/tf_rds_copy_tags_to_snapshots/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: check-rds-instance-copy-tags-to-snapshots-enabled
policies:
  - policy.yaml
resources:
  - resource.yaml
results:
  - policy: check-rds-instance-copy-tags-to-snapshots-enabled
    kind: Plan
    resources:
      - good-plan
    result: pass
  - policy: check-rds-instance-copy-tags-to-snapshots-enabled
    kind: Plan
    resources:
      - bad-plan
    result: fail
